# lab3

./: README.md  gg_classifier.pt  pyproject.toml
src/retrieval/: main.py  model.py
static/: index.html  style.css
tests/: conftest.py  test_api.py  test_model.py  test_smoke.py
